--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
         <activity
             android:name=".DisplayTextActivity"
             android:label="@string/title_activity_display_text"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".DailyQuestionActivity"
+            android:label="@string/title_activity_daily_question"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
