--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,13 @@
             android:name=".DailyQuestionActivity"
             android:label="@string/title_activity_daily_question"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="acc1b0b9ec29985ac9dbef0f05837dac47e0b387" />
+
+
+
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
